--- a/4/css/style.css
+++ b/4/css/style.css
@@ -1,6 +1,56 @@
+@font-face {
+  font-family: "Oswald";
+  src: local("Oswald"), url("../fonts/Oswald-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Oswald";
+  src: local("Oswald"), url("../fonts/Oswald-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+*,
+::after,
+::before {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  height: 100%;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: inline-block;
+  vertical-align: top;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: var(--background-page);
+  font-family: var(--main-font);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .visually-hidden {
   position: absolute;
-  width: 0px;
+  width: 0;
   height: 1px;
   margin: -1px;
   padding: 0;
@@ -9,25 +59,17 @@
   clip: rect(0, 0, 0, 0);
 }
 
-@font-face {
-  font-family: "Oswald";
-  src: local("Oswald"), url("../fonts/Oswald-Regular.woff2") format("woff2");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-img {
-  max-width: 100%;
-  height: auto;
-  display: inline-block;
-  vertical-align: top;
+:root {
+  --main-font: "Oswald", "Big Caslon", "sans-serif";
+  --default-black: #000000;
+  --black1: #444444;
+  --black2:#111111;
+  --default-white: #ffffff;
+  --background-page: #e5e5e5;
+  --green1: rgba(104, 183, 56, 0.85);
+  --green2: #68b738;
 }
 
-.page {
-  margin: 0;
-  font-family: "Oswald", "sans-serif", "Big Caslon";
-  min-height: 100%;
-}
 .page .page__wrapper {
   display: flex;
   flex-direction: column;
@@ -35,6 +77,7 @@ img {
   width: 100%;
   max-width: 320px;
   margin: 0 auto;
+  background-color: var(--default-white);
 }
 
 .main-header {
@@ -57,12 +100,301 @@ img {
 }
 .main-header .main-header__menu-opener {
   width: 24px;
-  height: 16px;
+  min-height: 16px;
+  box-shadow: inset 0 0 0 3px #83b3d3;
+  padding: 0;
+  background: none;
+  border: 0;
 }
 
 .main-container {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  width: 320px;
+}
+
+.motivation {
+  position: relative;
+  min-height: 480px;
+  width: 100%;
+  background-image: url("../../img/mobile/index/motivation_background.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 302px;
+  z-index: 0;
+  padding-top: 27px;
+}
+.motivation .motivation__title {
+  margin: 0;
+  position: relative;
+  z-index: 1;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 36px;
+  text-align: center;
+  color: var(--default-white);
+  margin-bottom: 25px;
+}
+.motivation .motivation__text {
+  display: block;
+  margin: 0;
+  position: relative;
+  z-index: 1;
+  font-size: 14px;
+  line-height: 14px;
+  text-transform: uppercase;
+  text-align: center;
+  color: var(--default-white);
+  margin-bottom: 302px;
+}
+.motivation .motivation__choose-button {
+  box-sizing: content-box;
+  width: 192px;
+  display: block;
+  position: relative;
+  z-index: 1;
+  margin: 0 auto;
+  padding: 7px 44px;
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.motivation::before {
+  content: "";
+  position: absolute;
+  background-color: var(--green1);
+  width: 320px;
+  height: 302px;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
+.button {
+  background-color: var(--green2);
+  color: var(--default-white);
+}
+
+.program {
+  width: 100%;
+  padding: 0 20px;
+}
+.program .program__list {
+  display: grid;
+  grid-template-columns: auto;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.program .program__list-item {
+  padding-top: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  width: 266px;
+  min-height: 280px;
+}
+.program .program__list-title {
+  margin: 0;
+  font-size: 24px;
+  line-height: 37px;
+  text-transform: uppercase;
+  color: var(--default-black);
+  margin-bottom: 30px;
+}
+.program .program__list-text {
+  display: block;
+  margin: 0;
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: lowercase;
+  color: var(--black1);
+  margin-bottom: 38px;
+}
+.program .program__list-link {
+  display: block;
+  font-size: 16px;
+  line-height: 16px;
+  text-align: left;
+  text-transform: uppercase;
+  color: var(--default-black);
+}
+
+.specification {
+  width: 100%;
+  padding: 0 20.5px;
+  min-height: 380px;
+}
+.specification .specification__title {
+  font-size: 36px;
+  line-height: 40px;
+  text-align: center;
+  color: var(--default-black);
+}
+.specification .specification__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.specification .specification__item {
+  padding-left: 80px;
+}
+.specification .specification__item:not(:last-child) {
+  margin-bottom: 20px;
+}
+.specification .specification__description {
+  margin: 0;
+}
+
+.example {
+  width: 100%;
+  min-height: 700px;
+  padding: 0 20px;
+  padding-top: 25px;
+  padding-bottom: 40px;
+}
+.example .example__title {
+  font-size: 36px;
+  line-height: 40px;
+  text-align: left;
+}
+.example .example__text {
+  font-family: "Arial", "sans-serif";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  color: var(--black1);
+  margin-bottom: 20px;
+}
+.example .example__statistic {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.example .weight__number {
+  display: block;
+  font-size: 24px;
+  line-height: 24px;
+  text-align: center;
+  color: var(--default-black);
+}
+.example .weight__title {
+  font-size: 12px;
+  line-height: 100%;
+  color: var(--black1);
+}
+.example .time__number {
+  display: block;
+  font-size: 24px;
+  line-height: 24px;
+  text-align: center;
+  color: var(--default-black);
+}
+.example .time__title {
+  font-size: 12px;
+  line-height: 100%;
+  color: var(--black1);
+}
+.example .example__cost {
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--default-black);
+  margin-bottom: 40px;
+}
+.example .example__slider-list {
+  padding: 0;
+  margin: 0 auto;
+}
+
+.fat-cat-logo {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  width: 280px;
+  height: 232px;
+}
+
+.slider-toggles {
+  display: flex;
+  justify-content: space-between;
+  width: 210px;
+}
+
+.invite {
+  width: 100%;
+  min-height: 474px;
+  display: flex;
+  flex-direction: column;
+}
+
+.invite-description {
+  display: flex;
+  padding: 26px 20px;
+}
+.invite-description .invite-description__info {
+  display: block;
+  margin: 0;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: var(--black2);
+}
+.invite-description .invite-description__address {
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: var(--black4);
+}
+
+.invite-map {
+  size: 362px 320px;
+}
+
+.main-footer {
+  width: 100%;
+  min-height: 236px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer-logo {
+  padding-top: 39px;
+  margin: 0 auto;
+  min-height: 95px;
+}
+
+.contacts {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  min-height: 63px;
+  width: 132px;
+  align-items: center;
+}
+.contacts .contacts__vk {
+  margin-right: 24px;
+}
+.contacts .youtube-link {
+  margin-right: 24px;
+}
+
+.footer-references {
+  display: flex;
+  justify-content: space-between;
+  min-height: 78px;
+  width: 281px;
+  align-items: center;
 }
 /*# sourceMappingURL=style.css.map */
