:heavy_check_mark: Сборка #4

--- a/4/css/style.css
+++ b/4/css/style.css
@@ -63,7 +63,8 @@ body {
   --main-font: "Oswald", "Big Caslon", "sans-serif";
   --default-black: #000000;
   --black1: #444444;
-  --black2:#111111;
+  --black2: #111111;
+  --black3: #222222;
   --default-white: #ffffff;
   --background-page: #e5e5e5;
   --green1: rgba(104, 183, 56, 0.85);
@@ -396,5 +397,374 @@ body {
   min-height: 78px;
   width: 281px;
   align-items: center;
+}
+
+.products {
+  padding-top: 27px;
+  width: 100%;
+  min-height: 1775px;
+  display: grid;
+  grid-template-columns: auto;
+  row-gap: 19px;
+  padding: 0 20px;
+}
+.products .products__title {
+  color: var(--default-black);
+  margin: 0;
+  width: 258px;
+  margin-left: 20px;
+  margin-bottom: 50px;
+}
+.products .products__table {
+  width: 100%;
+  min-height: 190px;
+  padding-top: 11px;
+  padding-bottom: 14px;
+  display: grid;
+  grid-template-columns: 140px 142px;
+  row-gap: 10px;
+}
+.products .products__image-wrapper {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+.products .products__parameters {
+  margin: 0;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.products .products__button {
+  grid-column-start: 1;
+  grid-column-end: -1;
+  justify-self: center;
+  display: block;
+  box-sizing: content-box;
+  width: 62px;
+  height: 20px;
+  padding: 10px 109px;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+}
+.products .products__product-more {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 158px;
+  width: 279px;
+  padding-top: 53px;
+}
+.products .products__product-text {
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--black2);
+  margin: 0;
+  margin-bottom: 8px;
+}
+.products .products__product-small-talk {
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  text-align: center;
+  color: var(--black1);
+  margin: 0;
+  margin-bottom: 21px;
+}
+.products .products__more-button {
+  width: 280px;
+  height: 40px;
+  padding: 0;
+  background: none;
+  border: 0;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--black1);
+}
+
+.title {
+  font-size: 36px;
+  line-height: 36px;
+  font-weight: 400;
+}
+
+.product .product__name {
+  font-size: 16px;
+  line-height: 20px;
+  align-items: center;
+  text-transform: uppercase;
+  color: var(--black3);
+}
+.product .products__parameters {
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  text-align: center;
+  color: var(--black1);
+}
+
+.additional {
+  width: 100%;
+  min-height: 964px;
+  padding-left: 18px;
+  padding-right: 20px;
+  display: flex;
+  flex-direction: column;
+  padding-top: 26px;
+}
+.additional .additional__title {
+  font-size: 24px;
+  line-height: 24px;
+  text-align: center;
+  margin: 0;
+  color: var(default-black);
+  margin-bottom: 35px;
+}
+.additional .additional__card {
+  min-height: 130px;
+  width: 282px;
+  display: flex;
+  flex-direction: column;
+}
+.additional .additional__name {
+  display: block;
+  margin: 0;
+  font-size: 16px;
+  line-height: 16px;
+  text-align: left;
+  text-transform: uppercase;
+  color: var(--black3);
+  margin-bottom: 13px;
+}
+.additional .additional__composition {
+  display: flex;
+  justify-content: space-between;
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 14px;
+  text-align: center;
+  color: var(--black1);
+  margin-bottom: 15px;
+}
+.additional .additional-button {
+  display: block;
+  box-sizing: content-box;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  width: 62px;
+  height: 20px;
+  padding: 10px 109px;
+}
+.additional .additional__gift {
+  position: relative;
+  z-index: 0;
+  background-image: url("../../img/mobile/catalog/additional-background.jpg");
+  background-repeat: no-repeat;
+  width: 280px;
+  min-height: 290px;
+  padding-top: 187px;
+  margin-top: 35px;
+  margin-bottom: 35px;
+}
+.additional .additional__gift .additional__gift-title {
+  position: relative;
+  z-index: 1;
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  color: var(--default-white);
+}
+.additional .additional__gift::before {
+  content: "";
+  position: absolute;
+  background-color: var(--green1);
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.questionnaire {
+  width: 100%;
+  padding-top: 27px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.questionnaire .questionnaire__title {
+  margin: 0;
+  width: 260px;
+  margin-bottom: 38px;
+}
+.questionnaire .questionnaire__text {
+  margin: 0;
+  display: block;
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: var(--default-black);
+  margin-bottom: 38px;
+}
+.questionnaire .questionnaire__form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.questionnaire .form__contacts {
+  width: 300px;
+  min-height: 241px;
+  padding-top: 26px;
+  padding-bottom: 23px;
+}
+.questionnaire .form__contacts-title {
+  display: block;
+  width: 300px;
+  font-size: 24px;
+  line-height: 26px;
+  color: var(--default-black);
+  margin-bottom: 35px;
+}
+.questionnaire .form__email-text {
+  display: flex;
+  width: 300px;
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: var(--black1);
+  margin-bottom: 14px;
+}
+.questionnaire .form__tel-text {
+  display: flex;
+  width: 300px;
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: var(--black1);
+}
+.questionnaire .form__comments {
+  min-height: 237px;
+  width: 300px;
+  padding-bottom: 23px;
+}
+.questionnaire .form__comments-title {
+  font-size: 24px;
+  line-height: 26px;
+  color: var(--default-black);
+  margin-bottom: 37px;
+}
+.questionnaire .form__comments-text {
+  width: 280px;
+  min-height: 150px;
+}
+.questionnaire .form__additional {
+  width: 300px;
+}
+.questionnaire .form__additional-title {
+  font-size: 24px;
+  line-height: 26px;
+  color: var(--default-black);
+  margin-bottom: 34px;
+}
+.questionnaire .form__additional-wrapper {
+  width: 280px;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  row-gap: 13px;
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: var(--default-black);
+  margin-bottom: 34px;
+}
+.questionnaire .form__submit-button {
+  min-height: 109px;
+  width: 280px;
+  padding-bottom: 32px;
+}
+.questionnaire .form__button {
+  padding: 0;
+  background: none;
+  border: 0;
+  background-color: var(--green2);
+  width: 280px;
+  min-height: 40px;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 21px;
+}
+.questionnaire .form__note {
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  text-transform: lowercase;
+  color: var(--default-black);
+}
+
+.form {
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+}
+.form .form__fieldset {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+.form .form__characteristics {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 13px;
+  color: var(--black1);
+  padding-bottom: 24px;
+}
+.form .form__name {
+  justify-self: end;
+  width: 230px;
+  min-height: 45px;
+}
+.form .form__weight {
+  justify-self: end;
+  width: 204px;
+  min-height: 45px;
+}
+.form .form__age {
+  justify-self: end;
+  width: 172px;
+  min-height: 45px;
+}
+.form .form__goal {
+  width: 320px;
+  min-height: 157px;
+  padding-top: 22px;
+  padding-bottom: 19px;
+  color: var(--black2);
+}
+.form .form__goal-wrapper {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  row-gap: 13px;
+  width: 277px;
+  min-height: 115px;
 }
 /*# sourceMappingURL=style.css.map */
